# Orbitos-island

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  design.md  plan.md  start.sh
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: main.toml
apps/desktop/src-tauri/src/: daemon_client.rs  lib.rs  main.rs  sounds.rs  wayland.rs
apps/desktop/src/components/: ActivityGraph.tsx  ActivityOrb.tsx  AgentPill.tsx  AnalyticsPanel.tsx  CommandPalette.tsx  ConnectionIndicator.tsx  Dashboard.tsx  DiscoveryWizard.tsx  FloatingBar.tsx  Overlay.tsx  PhaseDot.tsx  PlanDiffView.tsx  SearchBar.tsx  SessionRow.tsx  Settings.tsx  Timeline.tsx  TokenBars.tsx
apps/desktop/src/hooks/: useCursorEvents.ts  useDaemonConnection.ts  useKeyboardShortcuts.ts
apps/desktop/src/stores/: sessionStore.ts  settingsStore.ts
apps/desktop/src/test/: AgentPill.test.tsx  FloatingBar.test.tsx  Overlay.test.tsx  PhaseDot.test.tsx  SearchBar.test.tsx  SessionRow.test.tsx  TokenBars.test.tsx  daemonDisconnect.test.ts  sessionStore.test.ts  settingsStore.test.ts  setup.ts  useCursorEvents.test.ts
apps/desktop/src/utils/: sessionGrouping.ts  throttle.ts
core/daemon/: Cargo.toml
core/daemon/src/: cli.rs  discover.rs  handlers.rs  main.rs  notifier.rs  plugin_loader.rs  server.rs  watcher.rs
core/exporter/: Cargo.toml
core/exporter/src/: lib.rs
core/ipc/: Cargo.toml
core/ipc/src/: codec.rs  lib.rs  messages.rs  transport.rs
core/ipc/tests/: integration.rs
core/storage/: Cargo.toml
core/storage/src/: analytics.rs  db.rs  lib.rs  models.rs
daemon-core/: Cargo.toml
daemon-core/src/: lib.rs
daemon-core/src/agents/: base.rs  mod.rs  registry.rs  traits.rs
daemon-core/src/events/: bus.rs  mod.rs
daemon-core/src/notifications/: dispatcher.rs  mod.rs
daemon-core/src/state/: event.rs  mod.rs  session.rs
daemon-core/src/terminals/: detector.rs  ghostty.rs  jumper.rs  kitty.rs  konsole.rs  mod.rs  tmux.rs  wezterm.rs  zellij.rs
design-system/agentos/: MASTER.md
docs/: architecture.md  development.md  plugins.md  terminals.md
hooks/: Cargo.toml
hooks/src/: main.rs  parser.rs  sender.rs
plugins/aider/: Cargo.toml
plugins/aider/src/: lib.rs
plugins/antigravity/: Cargo.toml
plugins/antigravity/src/: lib.rs
plugins/claude/: Cargo.toml
plugins/claude/src/: lib.rs
plugins/codex/: Cargo.toml
plugins/codex/src/: lib.rs
plugins/copilot/: Cargo.toml
plugins/copilot/src/: lib.rs
plugins/cursor/: Cargo.toml
plugins/cursor/src/: lib.rs
plugins/deepseek/: Cargo.toml
plugins/deepseek/src/: lib.rs
plugins/gemini/: Cargo.toml
plugins/gemini/src/: lib.rs
plugins/opencode/: Cargo.toml
plugins/opencode/js/: agentos-opencode.js
plugins/opencode/src/: lib.rs
reports/: analysis_report.md
reports/verification/: 2026-05-15_08-07-30.md  2026-05-19_08-57-54.md
scripts/: diagnose-connection.py  install-claude-hooks.sh  install-hooks.sh  install-opencode-plugin.sh  test-system-sync.sh  uninstall-hooks.sh
scripts/wrappers/: agent-wrapper.sh.tmpl
