[workspace]
resolver = "2"
members = [
    "daemon-core",
    "core/ipc",
    "core/storage",
    "core/daemon",
    "core/exporter",
    "hooks",
    "plugins/opencode",
    "plugins/claude",
    "plugins/codex",
    "plugins/antigravity",
    "plugins/aider",
    "plugins/gemini",
    "plugins/cursor",
    "plugins/copilot",
    "plugins/deepseek",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify-rust = "4"
