[package]
name = "agentos-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentos-hook"
path = "src/main.rs"

[dependencies]
agentos-ipc = { path = "../core/ipc" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
