[package]
name = "agentos-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
daemon-core = { path = "../../daemon-core" }

[dev-dependencies]
tempfile = "3"
