[package]
name = "agentos-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
daemon-core = { path = "../../daemon-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
