[workspace]

[package]
name = "agentos-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentos_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"
